--- a/index.html
+++ b/index.html
@@ -4,22 +4,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>VESPA69 | Link Alternatif dan Daftar VESPA69</title>
-    <meta name="description" content="VESPA69 Link alternatif dan daftar untuk semua jenis permainan dengan tingkat kemenangan sangat tinggi serta RTP paling akurat VESPA69">
+    <meta name="description" content="VESPA69 || Link Login Utama || Vespa69, tempat terbaik untuk menikmati hiburan online yang seru dan mengasyikkan! Temukan berbagai permainan menarik dengan grafis yang memukau dan kesempatan untuk meraih kemenangan besar. Kami mengutamakan keamanan dan keadilan sehingga Anda dapat bermain dengan nyaman dan tenang. Nikm">
     <meta name="keywords" content="VESPA69, VESPA69 login, VESPA69 slot, VESPA69 rtp">
     <meta name="author" content="VESPA69">
 	<meta name="robots" content="index, follow"/>
     <meta content="website" property="og:type">
 	<meta property="og:site_name" content="VESPA69"/>
     <meta content="VESPA69 | Link Alternatif dan Daftar VESPA69" property="og:title">
-    <meta content="VESPA69 Link alternatif dan daftar untuk semua jenis permainan dengan tingkat kemenangan sangat tinggi serta RTP paling akurat VESPA69" property="og:description">
-    <meta content="https://vespa69menantimu.pages.dev/" property="og:url">
+    <meta content="VESPA69 || Link Login Utama || Vespa69, tempat terbaik untuk menikmati hiburan online yang seru dan mengasyikkan! Temukan berbagai permainan menarik dengan grafis yang memukau dan kesempatan untuk meraih kemenangan besar. Kami mengutamakan keamanan dan keadilan sehingga Anda dapat bermain dengan nyaman dan tenang. Nikm" property="og:description">
+    <meta content="https://vespa69login.pages.dev/" property="og:url">
 	<meta property="og:locale" content="id_ID"/>
     <meta name="geo.country" content="ID"/>
     <meta name="language" content="ID"/>
     <meta name="tgn.nation" content="Indonesia"/>
     <meta name="rating" content="general"/>
-	<link rel="amphtml" href="https://vespa69menantimu.pages.dev/"/>
-	<link rel="canonical" href="https://vespa69-real.tumblr.com/"/>
+	<link rel="amphtml" href="https://vespa69login.pages.dev/"/>
+	<link rel="canonical" href="https://vespa69login.tumblr.com/"/>
 	<link rel="icon" href="assets/images/favicon.png" type="image/png" sizes="16x16">
 
     <script async custom-element="amp-analytics" src="https://cdn.ampproject.org/v0/amp-analytics-0.1.js"></script>
